[package]
name = "rrun2"
version = "0.1.0"
authors = ["Sebastian May <me@bstr.eu>"]

[lib]
name = "commander"
path = "src/lib.rs"

[[bin]]
name = "rrun"
path = "src/main.rs"

[profile.release]
lto = true
panic = 'abort'

[dependencies.gtk]
version = "*"
features = ["v3_22"]

[dependencies]
log = "*"
gdk = "*"
simplelog = "*"